// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageDownload - with filename 1`] = `
<div
  className="css-f3q0l2-Container ehymm3l3"
>
  <div
    className="css-b3bf84-DownloadDiv ehymm3l2"
  >
    <div
      className="css-dp88vl-DownloadIconWrapper ehymm3l1"
    >
      <div
        className=""
        style={
          Object {
            "display": "inline",
          }
        }
      >
        <a
          download="test-document-upload-success"
          href="test-image-stub"
        >
          <svg />
        </a>
      </div>
    </div>
  </div>
  <div
    className="css-njka3h-ImageDiv ehymm3l0"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
</div>
`;

exports[`ImageDownload - without filename 1`] = `
<div
  className="css-f3q0l2-Container ehymm3l3"
>
  <div
    className="css-b3bf84-DownloadDiv ehymm3l2"
  >
    <div
      className="css-dp88vl-DownloadIconWrapper ehymm3l1"
    >
      <div
        className=""
        style={
          Object {
            "display": "inline",
          }
        }
      >
        <a
          download=""
          href="test-image-stub"
        >
          <svg />
        </a>
      </div>
    </div>
  </div>
  <div
    className="css-njka3h-ImageDiv ehymm3l0"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
</div>
`;
